--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="ads" id="adsTop" style="display: none;"></div>
 
-<div><iframe src="https://adukserve.blogspot.com/p/ads.html?format=468x60" width="468" height="60" scrolling="no" allowTransparency="true" marginwidth="0" marginheight="0" border="0" frameborder="0"></iframe></div>
+<div style="margin-top:20px;"><iframe src="https://adukserve.blogspot.com/p/ads.html?format=468x60" width="468" height="60" scrolling="no" allowTransparency="true" marginwidth="0" marginheight="0" border="0" frameborder="0"></iframe></div>
     
 <div id="boxies"></div>
 
