--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     
 <div id="boxies"></div>
 
-<div class="ads" id="adsBottom" style="display: none;"></div>
+<div class="ads" id="adsBottom" style="display: none;">
+    <div class="ad a125">
+        <iframe src="https://adukserve.blogspot.com/p/img.html?format=125x125" width="125" height="125" scrolling="no" allowTransparency="true" marginwidth="0" marginheight="0" border="0" frameborder="0"></iframe>
+    </div>
+</div>
 
 <div id="foot">© 2018 <a href="https://mp-primo.blogspot.com/p/psbp.html" target="_blank">Primo Startup Browsing Page</a> V1.0 - [<span id="versionID"></span>] - Powered by <a href="https://mp-primo.blogspot.com/primo" target="_blank">Primo</a></div>
 
