--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 
 <div class="ads" id="adsTop" style="display: none;"></div>
 
-<div style="margin-top:20px;"><iframe src="https://adukserve.blogspot.com/p/ads.html?format=468x60" width="468" height="60" scrolling="no" allowTransparency="true" marginwidth="0" marginheight="0" border="0" frameborder="0"></iframe></div>
+<div style="margin-top:20px;"><iframe src="https://adukserve.blogspot.com/p/ads.html?format=468x60&r=1&s=15" width="468" height="60" scrolling="no" allowTransparency="true" marginwidth="0" marginheight="0" border="0" frameborder="0"></iframe></div>
     
 <div id="boxies"></div>
 
 <div class="ads" id="adsBottom" style="display: none;">
     <div class="ad a125">
-        <iframe src="https://adukserve.blogspot.com/p/img.html?format=125x125" width="125" height="125" scrolling="no" allowTransparency="true" marginwidth="0" marginheight="0" border="0" frameborder="0"></iframe>
+        <iframe src="https://adukserve.blogspot.com/p/img.html?format=125x125&r=1&s=15" width="125" height="125" scrolling="no" allowTransparency="true" marginwidth="0" marginheight="0" border="0" frameborder="0"></iframe>
     </div>
 </div>
 
