--- a/startup.html
+++ b/startup.html
@@ -3,6 +3,8 @@
 <head>
     <title id="Head_title"></title>
     <meta charset="utf-8" />
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon" />
+    <link rel="icon" href="img/icon.png" type="image/png" />
     <meta name="description" id="Head_meta_desc" content="" />
     <meta name="keywords" id="Head_meta_key" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
