little bug fixed in version

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <script src="js/script.js"></script>
 <script src="js/sites.js"></script>
 <script src="js/ads.js"></script>
-<script id="script-src--userSites" src="userSites.js"></script>
+<script id="script-src--userSites"></script>
 <script src="js/version.js"></script>
 
 </body>
