--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <option value="https://www.google.com/search?q=">Google</option>
         <option value="https://duckduckgo.com/?q=" selected="selected">DuckDuckGo</option>
         <option value="https://www.startpage.com/sp/search?query=">Startpage</option>
+        <option value="https://metager.org/meta/meta.ger3?eingabe=">MetaGer</option>
+        <option value="https://www.mojeek.com/search?q=">Mojeek</option>
         <option value="https://www.bing.com/search?q=">Bing</option>
         <option value="https://search.yahoo.com/search?q=">Yahoo</option>
     </select>
@@ -31,15 +33,12 @@
 
 <div id="datetime"></div>
 
-<div class="ads" id="adsTop" style="display: none;"></div>
-
 <div id="boxies"></div>
-
-<div class="ads" id="adsBottom" style="display: none;"></div>
 
 <div id="foot">
     <p>
-        <img id="click-to-switch-mode" src="img/mode.png" width="32" style="cursor: pointer;" title="Switch Mode (Light/Dark)" />
+        <span><img id="click-to-switch-mode" src="img/mode.png" width="32" style="cursor: pointer;" title="Switch Mode (Light/Dark)" /></span>
+        | <span id="click-to-auto-detect-mode" class="clickable" title="Sync the Style Mode with your System Theme">Auto-Detect System Theme</span>
     </p>
     <p id="version-wrapper">
         <small>Version: <span id="version"></span></small>
@@ -54,7 +53,6 @@
 
 <script src="js/script.js"></script>
 <script src="js/sites.js"></script>
-<script src="js/ads.js"></script>
 <script id="script-src--userSites"></script>
 <script src="js/version.js"></script>
 
